Added API endpoints
