# routes/api.php
@@ -2,7 +2,12 @@
 
 use App\Actions\Authentication\LoginFarmer;
 use App\Actions\Authentication\LogoutFarmer;
+use App\Actions\Batch\RetrieveFarmerSeedAllocation;
+use App\Actions\Crop\RetrieveFarmerCrops;
+use App\Actions\Crop\RetrieveFarmerSeedStage;
 use App\Actions\FarmerReport\CreateFarmerReport;
+use App\Actions\FarmerReport\RetrieveFarmerSubmittedReports;
+use App\Actions\Farmland\RetrieveFarmerFarmlands;
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -16,9 +21,24 @@ use App\Actions\FarmerReport\CreateFarmerReport;
 
 use Illuminate\Support\Facades\Route;
 
-Route::group(['prefix' => 'auth', 'as' => 'api.'], function () {
-    Route::post('/login', LoginFarmer::class)->name('login');
-    Route::post('/logout', LogoutFarmer::class)->name('logout')->middleware('auth:api');
-});
+Route::group(['as' => 'api.'], function () {
+    Route::group(['prefix' => 'auth'], function () {
+        Route::post('/login', LoginFarmer::class)->name('login');
+        Route::post('/logout', LogoutFarmer::class)->name('logout')->middleware('auth:api');
+    });
 
-Route::post('/farmer-reports', CreateFarmerReport::class)->middleware('auth:api');
+    Route::group(['prefix' => 'farmer-reports', 'middleware' => 'auth:api'], function () {
+        Route::post('/', CreateFarmerReport::class);
+        Route::get('/', RetrieveFarmerSubmittedReports::class);
+    });
+
+    Route::group(['prefix' => 'crops', 'middleware' => 'auth:api'], function () {
+        Route::get('/', RetrieveFarmerCrops::class);
+        Route::get('/seed-stage', RetrieveFarmerSeedStage::class);
+        Route::get('/seed-allocation', RetrieveFarmerSeedAllocation::class);
+    });
+
+    Route::group(['prefix' => 'farmlands', 'middleware' => 'auth:api'], function () {
+        Route::get('/', RetrieveFarmerFarmlands::class);
+    });
+});
